# sentinelpasture

./: .dockerignore  .gitignore  BACKEND_COMPLETE.md  BACKEND_SETUP.md  MIGRATION_PLAN.md  README.md  compose.yaml  implementation_plan.md.resolved  package-lock.json  package.json  pnpm-lock.yaml  presentation.html  start-project.sh
ai-engine/: .flake8  .gitignore  ARCHITECTURE.md  CAPABILITIES.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SUMMARY.md  __init__.py  config.py  data.py  demo.py  exceptions.py  factory.py  generate.py  interfaces.py  model.py  orchestrator.py  pyproject.toml  requirements.txt  setup.py  train.py
ai-engine/api/: __init__.py  server.py
ai-engine/config/: __init__.py  constants.py  settings.py
ai-engine/core/: __init__.py  advanced_learning.py  causal_inference.py  continual_learning.py  distributed_intelligence.py  explainable_ai.py  federated_learning.py  graph_neural_networks.py  multimodal_fusion.py  neural_architecture_search.py  neuro_symbolic.py  quantum_optimizer.py  self_supervised_learning.py  signal_processor.py  state_space_models.py  threat_analyzer.py
ai-engine/examples/: basic_usage.py
ai-engine/tests/: __init__.py  conftest.py  test_orchestrator.py  test_signal_processor.py
ai-engine/utils/: __init__.py  decorators.py  logging.py  metrics.py  validation.py
apps/ai/: README.md  pyproject.toml
apps/ai/configs/: default.yaml
apps/ai/configs/datasets/: kenya_pilot.yaml
apps/ai/configs/eval/: metrics.yaml
apps/ai/configs/models/: anomaly_autoencoder.yaml  lgbm_baseline.yaml  stgnn.yaml  tft.yaml
apps/ai/data/artifacts/: baseline_risk_model.json
apps/ai/data/processed/: event_labels_monthly_national.csv  lgbm_baseline_summary.json  rainfall_features_monthly_national.csv  rainfall_features_monthly_subnational.csv  training_baseline_monthly_national.csv
apps/ai/data/raw/: ken-rainfall-subnat-5ytd.csv  kenya_civilian_targeting_events_and_fatalities_by_month-year_as-of-25feb2026.csv  kenya_civilian_targeting_events_and_fatalities_by_month-year_as-of-25feb2026.xlsx  kenya_demonstration_events_by_month-year_as-of-25feb2026.csv  kenya_demonstration_events_by_month-year_as-of-25feb2026.xlsx  kenya_political_violence_events_and_fatalities_by_month-year_as-of-25feb2026.csv  kenya_political_violence_events_and_fatalities_by_month-year_as-of-25feb2026.xlsx
apps/ai/deployments/: Dockerfile.inference  Dockerfile.training
apps/ai/src/ai/: __init__.py
apps/ai/src/ai/bootstrap/: __init__.py  demo_data.py
apps/ai/src/ai/common/: config.py  geo.py  hashing.py  io.py  logging.py  time.py
apps/ai/src/ai/datasets/builders/: split.py  (+2 more)
apps/ai/src/ai/evaluation/: backtesting.py  dashboards.py
apps/ai/src/ai/governance/: guardrails.py  ontology.py  policies.py
apps/ai/src/ai/registry/: artifacts.py  cards.py  model_registry.py
apps/ai/src/ai/serving/: __init__.py
apps/ai/src/ai/training/: retrain_pipeline.py  train_anomaly.py  train_lgbm.py  train_stgnn.py  train_tft.py
apps/ai/tests/integration/: __init__.py
apps/ai/tests/unit/: __init__.py
apps/api/: README.md  go.mod  pyproject.toml
apps/api/cmd/api/: main.go  main.py
apps/api/deployments/: Dockerfile
apps/api/internal/config/: config.go  config.py
apps/api/internal/server/: router.go  router.py
apps/api/internal/service/: ai.go  ai.py  auth.py  dashboard.go  dashboard.py
apps/api/src/api_service/: ai.py  audit.py  auth.py  dashboard.py  db.py  db_config.py  main.py  models.py  region_intelligence.py
apps/ingestion/: README.md  pyproject.toml
apps/ingestion/cmd/ingestion/: main.py
apps/ingestion/deployments/: Dockerfile
apps/ingestion/internal/collectors/acled/: fetch.py  parse.py
apps/ingestion/internal/collectors/admin/: manual_upload.py
apps/ingestion/internal/collectors/climate/: chirps.py  ndvi_modis.py
apps/ingestion/internal/collectors/markets/: prices.py
apps/ingestion/internal/collectors/mobility/: corridors.py
apps/ingestion/internal/config/: config.py
apps/ingestion/internal/normalizer/: geo_resolver.py  mapping.py
apps/ingestion/internal/pipeline/: orchestrator.py  validation.py
apps/ingestion/src/ingestion_service/: config.py  main.py  pipeline.py
apps/scheduler/: README.md  pyproject.toml
apps/scheduler/cmd/scheduler/: main.py
apps/scheduler/deployments/: Dockerfile
apps/scheduler/internal/clients/: ai_infer_client.py  ai_train_client.py  feature_client.py  ingestion_client.py
apps/scheduler/internal/jobs/: compute_features_daily.py  data_quality_reports.py  ingest_daily.py  plan.py  retrain_monthly.py  run_scoring_daily.py
apps/scheduler/internal/observability/: logger.py
apps/scheduler/src/scheduler_service/: jobs.py  main.py
(+186 files in other folders)
