[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-intel-api"
version = "0.1.0"
description = "FastAPI API service for governance-intel platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.2",
  "PyJWT==2.12.1",
  "pydantic==2.12.5",
  "psycopg==3.3.3",
  "sqlalchemy==2.0.48",
  "uvicorn[standard]==0.42.0"
]

[tool.setuptools.packages.find]
where = ["src"]
