[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-intel-ingestion"
version = "0.1.0"
description = "Python ingestion service for governance-intel platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109,<0.111",
  "uvicorn[standard]>=0.27,<0.31"
]

[tool.setuptools.packages.find]
where = ["src"]

