[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-intel-scheduler"
version = "0.1.0"
description = "Python scheduler service for governance-intel platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.2",
  "uvicorn[standard]==0.42.0"
]

[tool.setuptools.packages.find]
where = ["src"]
